--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,6 @@
-app:
-    resource: '@AppBundle/Controller/'
-    type: annotation
+cv:
+    resource: '@CVBundle/Resources/config/routing.yml'
+
+blog:
+    resource: '@BlogBundle/Resources/config/routing.yml'
+    prefix:   /blog
