--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,22 +14,45 @@ services:
         # if you need to do this, you can override this setting on individual services
         public: false
 
-    # makes classes in src/AppBundle available to be used as services
+    # makes classes in src/CVBundle available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    AppBundle\:
-        resource: '../../src/AppBundle/*'
+    CVBundle\:
+        resource: '../../src/CVBundle/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
+        exclude: '../../src/CVBundle/{Entity,Repository,Tests}'
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
-    AppBundle\Controller\:
-        resource: '../../src/AppBundle/Controller'
+    CVBundle\Controller\:
+        resource: '../../src/CVBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
 
     # add more services, or override services that need manual wiring
-    # AppBundle\Service\ExampleService:
+    # CVBundle\Service\ExampleService:
+    #     arguments:
+    #         $someArgument: 'some_value'
+
+
+
+
+    # makes classes in src/CVBundle available to be used as services
+    # this creates a service per class whose id is the fully-qualified class name
+    BlogBundle\:
+        resource: '../../src/BlogBundle/*'
+        # you can exclude directories or files
+        # but if a service is unused, it's removed anyway
+        exclude: '../../src/BlogBundle/{Entity,Repository,Tests}'
+
+    # controllers are imported separately to make sure they're public
+    # and have a tag that allows actions to type-hint services
+    BlogBundle\Controller\:
+        resource: '../../src/BlogBundle/Controller'
+        public: true
+        tags: ['controller.service_arguments']
+
+    # add more services, or override services that need manual wiring
+    # BlogBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
