--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -4,3 +4,16 @@ cv:
 blog:
     resource: '@BlogBundle/Resources/config/routing.yml'
     prefix:   /blog
+
+admin_area:
+    resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
+    prefix: /admin
+
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
