--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,6 +68,15 @@ swiftmailer:
     password: '%mailer_password%'
     spool: { type: memory }
 
+# FOSUserBundle
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: BlogBundle\Entity\User
+    from_email:
+        address: "%mailer_user%"
+        sender_name: "%mailer_user%"
+
 
 # Config Sonata
 sonata_block:
