--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -5,6 +5,9 @@ blog:
     resource: '@BlogBundle/Resources/config/routing.yml'
     prefix:   /blog
 
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
 admin_area:
     resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
     prefix: /admin
