--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -108,3 +108,37 @@ services:
     # BlogBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+
+
+    blog.admin.user:
+        class: BlogBundle\Admin\UserAdmin
+        arguments: [~, BlogBundle\Entity\User, ~]
+        tags:
+            - name: sonata.admin
+              manager_type: orm
+              label: User
+              group: "Blog"
+        public: true
+
+
+    blog.admin.post:
+        class: BlogBundle\Admin\PostAdmin
+        arguments: [~, BlogBundle\Entity\Post, ~]
+        tags:
+            - name: sonata.admin
+              manager_type: orm
+              label: Post
+              group: "Blog"
+
+        public: true
+
+
+    blog.admin.comment:
+        class: BlogBundle\Admin\CommentAdmin
+        arguments: [~, BlogBundle\Entity\Comment, ~]
+        tags:
+            - name: sonata.admin
+              manager_type: orm
+              label: Comment
+              group: "Blog"
+        public: true
