--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,11 +30,11 @@ security:
                 csrf_token_generator: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
-                default_target_path: homepage
+                default_target_path: sonata_admin_dashboard
 
             logout:
                 path: fos_user_security_logout
-                target: homepage
+                target: cv_home
 
             anonymous:    true
 
