--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,6 +14,18 @@ services:
         # if you need to do this, you can override this setting on individual services
         public: false
 
+
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
+
+    twig.extension.date:
+            class: Twig_Extensions_Extension_Date
+            tags:
+                - { name: twig.extension }
+
+
     # makes classes in src/CVBundle available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     CVBundle\:
