--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,15 @@ swiftmailer:
     password: '%mailer_password%'
     spool: { type: memory }
 
+# Migrations
+doctrine_migrations:
+    dir_name: "%kernel.root_dir%/DoctrineMigrations"
+    namespace: Application\Migrations
+    table_name: migration_versions
+    name: Application Migrations
+    organize_migrations: false
+
+
 # FOSUserBundle
 fos_user:
     db_driver: orm
