style page error + rédaction readme + amélioration makefile

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
         ],
         "post-update-cmd": [
             "@symfony-scripts"
+        ],
+        "build-params": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
         ]
     },
     "config": {
