--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,15 +4,20 @@
 parameters:
     database_host: 127.0.0.1
     database_port: ~
-    database_name: symfony
+    database_name: website_perso_guillaumeh
     database_user: root
     database_password: ~
     # You should uncomment this if you want to use pdo_sqlite
     #database_path: '%kernel.project_dir%/var/data/data.sqlite'
 
-    mailer_transport: smtp
-    mailer_host: 127.0.0.1
-    mailer_user: ~
+    #mailer_transport: smtp
+    #mailer_host: 127.0.0.1
+    #mailer_user: ~
+    #mailer_password: ~
+
+    mailer_transport: gmail
+    mailer_host: smtp.gmail.com
+    mailer_user: guillaumehanotel37@gmail.com
     mailer_password: ~
 
     # A secret key that's used to generate certain security-related tokens
